--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,20 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if (username) { %>
+          <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
+            <h4>Logged In As: <%=username %> </h4>
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+         </form>
+         <%} else { %>
+          <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+           <input class="form-center" type="text" name="URL" placeholder="username" />
+           <button type="submit" class="btn btn-outline-dark">Login</button>
+         </form>
+        <% } %>
       </div>
     </div>
   </nav>
+
+  
 </header>
