--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,8 +13,15 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <br/>
       </div>
     <div class="card-footer text-muted"></div>
+    <p><h1>Edit</h1></p>
+      <form method="POST" action="/urls/<%=shortURL%>/modify">
+        <label>New URL:</label>
+        <input class="form-center" type="text" name="URL" placeholder="http://www.tsn.ca" />
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
