--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,17 +22,17 @@
         </tr>
       </thead>
       <tbody>
-        <% for(let url in urls) { %>
+        <% for(let shortUrl in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= shortUrl %></td>
+            <td><%= urls[shortUrl].longURL %></td>
             <td>
-              <form method="GET" action="/urls/<%=url%>">
+              <form method="GET" action="/urls/<%=shortUrl%>">
                 <button type='submit' class="btn btn-outline-primary"> Edit </button>
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/<%=url %>/delete">
+              <form method="POST" action="/urls/<%=shortUrl %>/delete">
                 <button type="submit" class="btn btn-outline-danger">DELETE</button>
               </form>
             </td>
