--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,6 +11,7 @@
 <%- include('partials/_header') %>
 <body>
   <main style="margin: 1em;">
+    <% if (user) { %>
     <h3>My URLs</h3>
     <table class="table">
       <thead>
@@ -24,22 +25,21 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td>
-              <form method="GET" action="/urls/<%=url%>">
-                <button type='submit' class="btn btn-outline-primary"> Edit </button>
-              </form>
-            </td>
-            <td>
-              <form method="POST" action="/urls/<%=url %>/delete">
-                <button type="submit" class="btn btn-outline-danger">DELETE</button>
-              </form>
-            </td>
+            <td><a href="/u/<%= url %>"><%= url %></a></td>
+            <td><%= urls[url].longURL %></td>
+            <td><form method="GET" action="/urls/<%=url%>">
+              <button type='submit' class="btn btn-outline-primary"> Edit </button>
+              </form></td>
+            <td><form method="POST" action="/urls/<%=url %>/delete">
+            <button type='submit' class="btn btn-outline-danger"> Delete</button>
+            </form></td>
           </tr>
         <% } %>
       </tbody>
     </table>
+    <% } else { %>
+      <h3>Please login to see your URLs</h3>
+    <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
